# GeneralLP

./: .gitignore  CMakeLists.txt  README.md
resources/: table1.txt  table2.txt  table3.txt
src/: CMakeLists.txt  main.cpp  tty_main.cpp
src/parser/: TableParser.hpp  parser_util.cpp  parser_util.hpp
src/printer/: TablePrinter.hpp
src/solver/: Solver.cpp  Solver.hpp  solver_calc.hpp
src/table/: Table.hpp  TableCreator.hpp  TableFloat.cpp
src/util/: calc.hpp  exception.hpp  file.hpp
test/: CMakeLists.txt
test/parser/: ParserUtilTest.cpp
test/solver/: SolverTest.cpp
test/table/: TableCreatorTextTest.cpp  TableTest.cpp
